// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UIButton/> Snapshot renders without crashing using mount 1`] = `
<UIButton>
  <styled.button
    onClick={[Function]}
    secondary={false}
  >
    <button
      className="sc-bdnxRM eXwMXx"
      onClick={[Function]}
    >
      <span />
    </button>
  </styled.button>
</UIButton>
`;

exports[`<UIButton/> Snapshot renders without crashing using render 1`] = `
<button
  class="sc-bdnxRM eXwMXx"
>
  <span />
</button>
`;

exports[`<UIButton/> Snapshot renders without crashing using shallow 1`] = `
<styled.button
  onClick={[Function]}
  secondary={false}
>
  <span />
</styled.button>
`;
